fixed layout issue when logging in

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -5,8 +5,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 4%;
   box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.1);
+  padding: 0 1%;
 
   .menu {
     visibility: hidden;
